[gd_scene load_steps=18 format=3 uid="uid://c2m5omaymvbbm"]

[ext_resource type="Script" uid="uid://cqu1f0j8xti44" path="res://e/startmenu.gd" id="1_6ymmn"]
[ext_resource type="Texture2D" uid="uid://dieploo7mk1im" path="res://images/bake.png" id="2_qb5x8"]
[ext_resource type="FontFile" uid="uid://dsa2nghruisiv" path="res://images/KiriFont.otf" id="4_cbmov"]
[ext_resource type="PackedScene" uid="uid://b4wpbrf0cwbnr" path="res://color_rect.tscn" id="4_em0ha"]

[sub_resource type="Animation" id="Animation_230xe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg/o:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.9372549, 0.7058824, 0.37254903, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg/r:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.54901963, 0.21568628, 0.21960784, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bg/o2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.9372549, 0.7058824, 0.37254903, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bg/r2:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.54901963, 0.21568628, 0.21960784, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("bg/o3:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.9372549, 0.7058824, 0.37254903, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("bg/r3:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.54901963, 0.21568628, 0.21960784, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("bg/o4:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.9372549, 0.7058824, 0.37254903, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("bg/r4:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.54901963, 0.21568628, 0.21960784, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("bg/o5:color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.9372549, 0.7058824, 0.37254903, 1)]
}

[sub_resource type="Animation" id="Animation_6ymmn"]
resource_name = "bg"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg/o:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.9424336, 0.6738157, 0.6637372, 1), Color(0.54901963, 0.21568628, 0.21960784, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg/r:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.54901963, 0.21568628, 0.21960784, 1), Color(0.9424336, 0.6738157, 0.6637372, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bg/o2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.9424336, 0.6738157, 0.6637372, 1), Color(0.54901963, 0.21568628, 0.21960784, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bg/r2:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.03333336, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.54901963, 0.21568628, 0.21960784, 1), Color(0.9424336, 0.6738157, 0.6637372, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("bg/o3:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.9424336, 0.6738157, 0.6637372, 1), Color(0.54901963, 0.21568628, 0.21960784, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("bg/r3:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.54901963, 0.21568628, 0.21960784, 1), Color(0.9424336, 0.6738157, 0.6637372, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("bg/o4:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.9424336, 0.6738157, 0.6637372, 1), Color(0.54901963, 0.21568628, 0.21960784, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("bg/r4:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.54901963, 0.21568628, 0.21960784, 1), Color(0.9424336, 0.6738157, 0.6637372, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("bg/o5:color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.9424336, 0.6738157, 0.6637372, 1), Color(0.54901963, 0.21568628, 0.21960784, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s6qhg"]
_data = {
&"RESET": SubResource("Animation_230xe"),
&"bg": SubResource("Animation_6ymmn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cbmov"]
size = Vector2(793.1758, 205.4945)

[sub_resource type="Animation" id="Animation_4ib3u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(656, 872)]
}

[sub_resource type="Animation" id="Animation_cbmov"]
resource_name = "button_pop"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(656, 872), Vector2(560.00006, 848.00006)]
}

[sub_resource type="Animation" id="Animation_70ew6"]
resource_name = "button_pop2"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(584, 848), Vector2(656, 872)]
}

[sub_resource type="Animation" id="Animation_em0ha"]
resource_name = "text_pop"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.18946497),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3)]
}

[sub_resource type="Animation" id="Animation_jllib"]
resource_name = "text_pop2"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 0.2332585),
"update": 0,
"values": [Vector2(1.4, 1.4), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_70ew6"]
_data = {
&"RESET": SubResource("Animation_4ib3u"),
&"button_pop": SubResource("Animation_cbmov"),
&"button_pop2": SubResource("Animation_70ew6"),
&"text_pop": SubResource("Animation_em0ha"),
&"text_pop2": SubResource("Animation_jllib")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_em0ha"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.7490196, 0.34117648, 0.36078432, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ib3u"]
bg_color = Color(0.7490196, 0.34117648, 0.36078432, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.99116415, 0.99116427, 0.99116415, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_jllib"]
Button/colors/font_hover_color = Color(0.7490196, 0.34117648, 0.36078432, 1)
Button/font_sizes/font_size = 40
Button/fonts/font = ExtResource("4_cbmov")
Button/styles/hover = SubResource("StyleBoxFlat_em0ha")
Button/styles/normal = SubResource("StyleBoxFlat_4ib3u")

[node name="startmenu" type="Node2D"]
script = ExtResource("1_6ymmn")

[node name="bg" type="Node2D" parent="."]

[node name="r" type="ColorRect" parent="bg"]
offset_left = 392.0
offset_top = -178.0
offset_right = 637.0
offset_bottom = 900.0
rotation = 0.58262974
mouse_filter = 1
color = Color(0.54901963, 0.21568628, 0.21960784, 1)
metadata/_edit_use_anchors_ = true

[node name="o2" type="ColorRect" parent="bg"]
offset_left = 704.0
offset_top = -220.00003
offset_right = 951.68744
offset_bottom = 1329.1604
rotation = 0.57996225
mouse_filter = 1
color = Color(0.9372549, 0.7058824, 0.37254903, 1)
metadata/_edit_use_anchors_ = true

[node name="r2" type="ColorRect" parent="bg"]
offset_left = 992.00006
offset_top = -214.0
offset_right = 1237.0
offset_bottom = 1386.5718
rotation = 0.5776673
mouse_filter = 1
color = Color(0.54901963, 0.21568628, 0.21960784, 1)
metadata/_edit_use_anchors_ = true

[node name="o3" type="ColorRect" parent="bg"]
offset_left = 1223.6053
offset_top = -185.29468
offset_right = 1468.6053
offset_bottom = 1394.1835
rotation = 0.5577695
mouse_filter = 1
color = Color(0.9372549, 0.7058824, 0.37254903, 1)
metadata/_edit_use_anchors_ = true

[node name="r3" type="ColorRect" parent="bg"]
offset_left = 1567.3901
offset_top = -274.85205
offset_right = 1836.7292
offset_bottom = 1428.0623
rotation = 0.56205815
mouse_filter = 1
color = Color(0.54901963, 0.21568628, 0.21960784, 1)
metadata/_edit_use_anchors_ = true

[node name="o4" type="ColorRect" parent="bg"]
offset_left = 1778.935
offset_top = -120.46564
offset_right = 2032.293
offset_bottom = 1481.7915
rotation = 0.5636718
mouse_filter = 1
color = Color(0.9372549, 0.7058824, 0.37254903, 1)
metadata/_edit_use_anchors_ = true

[node name="r4" type="ColorRect" parent="bg"]
offset_left = 2014.4708
offset_top = -18.593323
offset_right = 2275.4985
offset_bottom = 1351.4067
rotation = 0.56587434
mouse_filter = 1
color = Color(0.54901963, 0.21568628, 0.21960784, 1)
metadata/_edit_use_anchors_ = true

[node name="o5" type="ColorRect" parent="bg"]
offset_left = 2119.5435
offset_top = 316.44342
offset_right = 2385.4788
offset_bottom = 1394.4434
rotation = 0.584779
mouse_filter = 1
color = Color(0.9372549, 0.7058824, 0.37254903, 1)
metadata/_edit_use_anchors_ = true

[node name="o" type="ColorRect" parent="bg"]
offset_left = 859.38184
offset_top = -1297.9565
offset_right = 1104.3818
offset_bottom = 1481.1343
rotation = 0.584779
mouse_filter = 1
color = Color(0.9372549, 0.7058824, 0.37254903, 1)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="bg"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_s6qhg")
}
autoplay = "bg"

[node name="ColorRect" type="ColorRect" parent="bg"]
offset_left = 342.0
offset_top = -116.0
offset_right = 382.0
offset_bottom = 660.0
rotation = 0.5942764
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="bg"]
offset_left = 600.18274
offset_top = -93.57959
offset_right = 644.7899
offset_bottom = 1123.2375
rotation = 0.5942764
metadata/_edit_use_anchors_ = true

[node name="ColorRect3" type="ColorRect" parent="bg"]
offset_left = 915.00006
offset_top = -126.00003
offset_right = 959.60724
offset_bottom = 1455.9482
rotation = 0.5942764
metadata/_edit_use_anchors_ = true

[node name="ColorRect4" type="ColorRect" parent="bg"]
offset_left = 1195.0
offset_top = -174.0
offset_right = 1239.6072
offset_bottom = 1407.9482
rotation = 0.550409
metadata/_edit_use_anchors_ = true

[node name="ColorRect5" type="ColorRect" parent="bg"]
offset_left = 1454.0
offset_top = -147.00003
offset_right = 1498.6072
offset_bottom = 1434.9482
rotation = 0.550409
metadata/_edit_use_anchors_ = true

[node name="ColorRect6" type="ColorRect" parent="bg"]
offset_left = 1748.9999
offset_top = -111.00003
offset_right = 1793.607
offset_bottom = 1470.9482
rotation = 0.550409
metadata/_edit_use_anchors_ = true

[node name="ColorRect7" type="ColorRect" parent="bg"]
offset_left = 2004.0
offset_top = -72.99991
offset_right = 2048.6072
offset_bottom = 1508.9484
rotation = 0.550409
metadata/_edit_use_anchors_ = true

[node name="ColorRect8" type="ColorRect" parent="bg"]
offset_left = 2247.0
offset_top = 43.99997
offset_right = 2291.6072
offset_bottom = 1625.9482
rotation = 0.550409
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(958, 446)
texture = ExtResource("2_qb5x8")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(6.7615356, -29.230774)
scale = Vector2(1.4000002, 1.4000002)
shape = SubResource("RectangleShape2D_cbmov")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_70ew6")
}

[node name="Button" type="Button" parent="."]
offset_left = 656.0
offset_top = 872.0
offset_right = 1238.0012
offset_bottom = 1023.0
theme = SubResource("Theme_jllib")
text = "start"
metadata/_edit_use_anchors_ = true

[node name="ColorRect" parent="." instance=ExtResource("4_em0ha")]

[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_area_2d__mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_area_2d__mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
